--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "drizzle-graphql-plus",
   "type": "module",
   "author": "alcala.rao@gmail.com (Roy Alcala)",
-  "version": "0.8.9",
+  "version": "0.8.10",
   "description": "Automatically generate GraphQL schema or customizable schema config fields from Drizzle ORM schema",
   "scripts": {
     "build": "pnpm tsx scripts/build.ts",
     "b": "pnpm build",
     "pack": "rm -f *.tgz && (cd dist && npm pack --pack-destination ..) && mv drizzle-graphql-plus-*.tgz package.tgz",
     "publish": "npm publish package.tgz --access public --no-provenance",
-    "build:pack:publish": "pnpm build && pnpm pack && pnpm publish",
+    "build:pack:publish": "pnpm build && (cd dist && npm pack --pack-destination ..) && mv drizzle-graphql-plus-*.tgz package.tgz && npm publish package.tgz --access public --no-provenance",
     "test": "vitest run",
     "server-test:pg": "DB_TYPE=pg tsx watch server/server.ts",
     "server-test:mysql": "DB_TYPE=mysql tsx watch server/server.ts",
