--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "publish": "npm publish package.tgz --access public --no-provenance",
     "build:pack:publish": "pnpm build && (cd dist && npm pack --pack-destination ..) && mv drizzle-graphql-plus-*.tgz package.tgz && npm publish package.tgz --access public --no-provenance",
     "test": "vitest run",
+    "test-server:db:push": "npx drizzle-kit push --dialect=sqlite --schema=./test-server/schema.ts --url=file:test-server/test.db",
     "test-server:seed": "tsx test-server/seed.ts",
-    "test-server:start": "tsx test-server/server.ts",
-    "test-server": "pnpm test-server:seed && pnpm test-server:start",
+    "test-server": "pnpm test-server:seed && tsx test-server/server.ts",
+    "test-server-sdl": "pnpm test-server:db:push && pnpm test-server:seed && tsx test-server/server-sdl.ts",
     "server-test:pg": "DB_TYPE=pg tsx watch server/server.ts",
     "server-test:mysql": "DB_TYPE=mysql tsx watch server/server.ts",
     "server-test:sqlite": "DB_TYPE=sqlite tsx watch server/server.ts",
@@ -98,7 +99,10 @@
   },
   "homepage": "https://github.com/royalcala/drizzle-graphql-plus",
   "dependencies": {
-    "graphql-parse-resolve-info": "^4.13.0"
+    "@graphql-tools/schema": "^10.0.30",
+    "graphql-parse-resolve-info": "^4.13.0",
+    "graphql-scalars": "^1.25.0",
+    "ulid": "^3.0.2"
   },
   "peerDependencies": {
     "drizzle-orm": ">=0.30.9",
