--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "publish": "npm publish package.tgz --access public --no-provenance",
     "build:pack:publish": "pnpm build && (cd dist && npm pack --pack-destination ..) && mv drizzle-graphql-plus-*.tgz package.tgz && npm publish package.tgz --access public --no-provenance",
     "test": "vitest run",
+    "test:resolvers": "npx drizzle-kit push --dialect=sqlite --schema=./test-server/schema.ts --url=file:test-server/test-resolvers.db && vitest run test-server/resolvers.test.ts",
     "test-server:db:push": "npx drizzle-kit push --dialect=sqlite --schema=./test-server/schema.ts --url=file:test-server/test.db",
     "test-server:seed": "tsx test-server/seed.ts",
     "test-server": "pnpm test-server:seed && tsx test-server/server.ts",
